--- a/k8s/gateway-deployment.yml
+++ b/k8s/gateway-deployment.yml
@@ -65,10 +65,19 @@ spec:
                 name: boot-admin-secret
                 key: password
 
+        startupProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: 8002
+          failureThreshold: 30
+          periodSeconds: 10
+          initialDelaySeconds: 30
+
         livenessProbe:
           httpGet:
             path: /actuator/health/liveness
             port: 8002
+
         readinessProbe:
           httpGet:
             path: /actuator/health/readiness
