layered docker builds

--- a/article-service/Dockerfile
+++ b/article-service/Dockerfile
@@ -1,16 +1,12 @@
-FROM openjdk:17-alpine
-#FROM eclipse-temurin:17-jdk-jammy
-
+FROM openjdk:17-alpine as builder
 ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
 
-#LABEL project.name=${project.artifactId} \
-#      project.version=${project.version}
-
-LABEL custom.label="article-service-docker-image-custom-label"
-
-COPY ${JAR_FILE} app.jar
-#ENTRYPOINT ["java", "-jar","/app.jar","--spring.profiles.active=initrunners"]
-#ENTRYPOINT ["java", "-jar","-XX:+FlightRecorder","-XX:StartFlightRecording=settings=profile,delay=5s,disk=true,dumponexit=true,duration=200s,filename=myrecording.jfr","/app.jar","--spring.profiles.active=initrunners"]
-ENTRYPOINT ["java", "-jar","-XX:+FlightRecorder","-XX:StartFlightRecording=settings=profile,disk=true,dumponexit=true,maxage=4h,maxsize=400MB,filename=myrecording.jfr","/app.jar","--spring.profiles.active=initrunners"]
-
-#ENTRYPOINT exec java -Xmx1512m -Xms1g [...] -cp app:app/lib/* com.schibsted.yada.Yada
+FROM openjdk:17-alpine
+COPY --from=builder dependencies/ ./
+COPY --from=builder spring-boot-loader/ ./
+COPY --from=builder internal-dependencies/ ./
+COPY --from=builder snapshot-dependencies/ ./
+COPY --from=builder application/ ./
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
