--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,12 +1,11 @@
-FROM openjdk:17-alpine
-ARG user=spring
-ARG group=spring
+FROM openjdk:17-alpine as builder
 ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
 
-RUN addgroup -S ${group} && adduser -S ${user} -G ${group}
-
-#USER ${user}
-#can't find tomcat access logs with non-root user
-
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+FROM openjdk:17-alpine
+COPY --from=builder dependencies/ ./
+COPY --from=builder spring-boot-loader/ ./
+COPY --from=builder snapshot-dependencies/ ./
+COPY --from=builder application/ ./
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
