--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -1,9 +1,11 @@
-FROM openjdk:17-alpine
+FROM openjdk:17-alpine as builder
 ARG JAR_FILE=target/*.jar
+COPY ${JAR_FILE} application.jar
+RUN java -Djarmode=layertools -jar application.jar extract
 
-#LABEL project.name=${project.artifactId} \
-#      project.version=${project.version}
-
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
-
+FROM openjdk:17-alpine
+COPY --from=builder dependencies/ ./
+COPY --from=builder spring-boot-loader/ ./
+COPY --from=builder snapshot-dependencies/ ./
+COPY --from=builder application/ ./
+ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
