--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -105,8 +105,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <layers>
+                        <enabled>true</enabled>
+                        <configuration>${project.basedir}/src/layers.xml</configuration>
+                    </layers>
+                </configuration>
                 <executions>
                     <execution>
+                        <id>build-info</id>
                         <goals>
                             <goal>build-info</goal>
                         </goals>
@@ -118,6 +125,12 @@
                                 <java.target>${maven.compiler.target}</java.target>
                             </additionalProperties>
                         </configuration>
+                    </execution>
+                    <execution>
+                        <id>layers</id>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
