--- a/k8s/gateway-deployment.yml
+++ b/k8s/gateway-deployment.yml
@@ -30,7 +30,7 @@ spec:
 #            cpu: 4
           requests:
             memory: 512Mi
-#            cpu: 1
+            cpu: "1000m"
         env:
           - name: JAVA_TOOL_OPTIONS
             value: "-Xmx256m"
