--- a/k8s/repo-service-deployment.yml
+++ b/k8s/repo-service-deployment.yml
@@ -27,6 +27,7 @@ spec:
             memory: 512Mi
           requests:
             memory: 512Mi
+            cpu: "1000m"
         env:
           - name: JAVA_TOOL_OPTIONS
             value: "-Xmx256m"
