Relogin component, invalidate session on oauth token expiration

--- a/playground/playground-keycloak/docker-compose.yml
+++ b/playground/playground-keycloak/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
       POSTGRES_PASSWORD: password
+    restart: unless-stopped
+
   keycloak:
     image: quay.io/keycloak/keycloak:legacy
     environment:
