--- a/gateway/src/main/resources/application-local.yml
+++ b/gateway/src/main/resources/application-local.yml
@@ -20,6 +20,7 @@ POD_IP: "127.0.0.1"
 
 logging:
   level:
+    com.hipravin: DEBUG
     org.springframework: INFO
     org.springframework.security: INFO
 #    org.springframework: DEBUG
