--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,10 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/styles": "4.10.0",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.11.3",
+    "@emotion/styled": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^3.0.1"
   },
