--- a/article-service/Dockerfile
+++ b/article-service/Dockerfile
@@ -7,6 +7,6 @@ FROM openjdk:17-alpine
 COPY --from=builder dependencies/ ./
 COPY --from=builder spring-boot-loader/ ./
 COPY --from=builder internal-dependencies/ ./
-COPY --from=builder snapshot-dependencies/ ./
+#COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder application/ ./
 ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
