--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -6,6 +6,6 @@ RUN java -Djarmode=layertools -jar application.jar extract
 FROM openjdk:17-alpine
 COPY --from=builder dependencies/ ./
 COPY --from=builder spring-boot-loader/ ./
-COPY --from=builder snapshot-dependencies/ ./
+#COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder application/ ./
 ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
