--- a/repo-service/src/test/resources/application-test.yml
+++ b/repo-service/src/test/resources/application-test.yml
@@ -5,6 +5,11 @@ spring:
     username: sa
     password:
 
+  boot:
+    admin:
+      client:
+        enabled: false
+
   sql:
     init:
       mode: always
