--- a/article-service/src/main/resources/application-local.yml
+++ b/article-service/src/main/resources/application-local.yml
@@ -6,11 +6,12 @@ spring:
   boot:
     admin:
       client:
-        url: #http://localhost:8070
-        username: admin
-        password: admin
-        instance:
-          management-base-url: #http://localhost:8083
+        enabled: false
+#        url: http://localhost:8070
+#        username: admin
+#        password: admin
+#        instance:
+#          management-base-url: http://localhost:8083
 
 logging:
   level:
