--- a/gateway/src/main/resources/application-local.yml
+++ b/gateway/src/main/resources/application-local.yml
@@ -2,11 +2,12 @@ spring:
   boot:
     admin:
       client:
-        url: #http://localhost:8070
-        username: admin
-        password: admin
-        instance:
-          management-base-url: #http://localhost:8002
+        enabled: false
+#        url: http://localhost:8070
+#        username: admin
+#        password: admin
+#        instance:
+#          management-base-url: http://localhost:8002
 
 ARTICLE_SERVICE_URI: "http://localhost:8082"
 REPO_SERVICE_URI: "http://localhost:8182"
