--- a/k8s/article/article-service-deployment.yml
+++ b/k8s/article/article-service-deployment.yml
@@ -18,7 +18,7 @@ spec:
         app: article-service
     spec:
       containers:
-      - image: hipravin/devcompanion-article-service:latest
+      - image: hipravin/devcompanion-article-service:0.0.1-SNAPSHOT
         imagePullPolicy: IfNotPresent
         name: devcompanion-article-service
 #        resources: {}
