--- a/repo-service/src/main/resources/application-local.yml
+++ b/repo-service/src/main/resources/application-local.yml
@@ -11,11 +11,12 @@ spring:
   boot:
     admin:
       client:
-        url: #http://localhost:8070
-        username: admin
-        password: admin
-        instance:
-          management-base-url: #http://localhost:8183
+        enabled: false
+#        url: http://localhost:8070
+#        username: admin
+#        password: admin
+#        instance:
+#          management-base-url: http://localhost:8183
 
 logging:
   level:
