--- a/repo-service/src/test/resources/application-test.yml
+++ b/repo-service/src/test/resources/application-test.yml
@@ -1,4 +1,7 @@
 spring:
+  flyway:
+    enabled: false
+
   datasource:
     driver-class-name: org.hsqldb.jdbc.JDBCDriver
     url: jdbc:hsqldb:mem:testdb;sql.syntax_pgs=true
