improve openapi config, expose api-docs with gateway

--- a/repo-service/src/main/resources/application.yml
+++ b/repo-service/src/main/resources/application.yml
@@ -25,7 +25,6 @@ spring:
     hibernate:
       ddl-auto: none
 
-
 #  security:
 #    oauth2:
 #      resourceserver:
@@ -67,7 +66,11 @@ application:
   repo-path: /stub
 
 ###
-#disable openapi
+#openapi
 springdoc:
+  api-docs:
+    path: "/api-docs/repos/v3/api-docs"
+    enabled: true
   swagger-ui:
-    enabled: false
+    path: "/api-docs/repos/swagger-ui"
+    enabled: true
