--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -17,9 +17,7 @@
         <java.version>17</java.version>
         <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
         <spring-boot-admin.version>2.7.4</spring-boot-admin.version>
-
-        <!--        <timestamp>${maven.build.timestamp}</timestamp>-->
-        <!--        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>-->
+        <springdoc-openapi.version>1.6.14</springdoc-openapi.version>
     </properties>
 
     <dependencyManagement>
@@ -88,7 +86,13 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.9</version>
+            <version>${springdoc-openapi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>${springdoc-openapi.version}</version>
         </dependency>
 
         <dependency>
