--- a/article-service/src/main/resources/application.yml
+++ b/article-service/src/main/resources/application.yml
@@ -60,7 +60,11 @@ management:
     port: 8083
 
 ###
-#disable openapi
+#openapi
 springdoc:
+  api-docs:
+    path: "/api-docs/articles/v3/api-docs"
+    enabled: true
   swagger-ui:
-    enabled: false
+    path: "/api-docs/articles/swagger-ui"
+    enabled: true
