--- a/repo-service/pom.xml
+++ b/repo-service/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <java.version>17</java.version>
         <spring-boot-admin.version>2.7.4</spring-boot-admin.version>
+        <springdoc-openapi.version>1.6.14</springdoc-openapi.version>
     </properties>
 
     <dependencyManagement>
@@ -78,7 +79,13 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.6.9</version>
+            <version>${springdoc-openapi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-security</artifactId>
+            <version>${springdoc-openapi.version}</version>
         </dependency>
 
         <dependency>
