--- a/article-service/pom.xml
+++ b/article-service/pom.xml
@@ -40,11 +40,16 @@
         </dependencies>
     </dependencyManagement>
 
-
     <dependencies>
         <dependency>
             <groupId>com.hipravin.devcompanion</groupId>
             <artifactId>domain-repo</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.hipravin.devcompanion</groupId>
+            <artifactId>api-common</artifactId>
             <version>${project.version}</version>
         </dependency>
 
@@ -71,6 +76,11 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
