--- a/article-service/Dockerfile
+++ b/article-service/Dockerfile
@@ -9,4 +9,4 @@ COPY --from=builder spring-boot-loader/ ./
 COPY --from=builder internal-dependencies/ ./
 #COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher"]
