--- a/repo-service/Dockerfile
+++ b/repo-service/Dockerfile
@@ -8,4 +8,4 @@ COPY --from=builder dependencies/ ./
 COPY --from=builder spring-boot-loader/ ./
 #COPY --from=builder snapshot-dependencies/ ./
 COPY --from=builder application/ ./
-ENTRYPOINT ["java", "org.springframework.boot.loader.JarLauncher"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "org.springframework.boot.loader.JarLauncher"]
