--- a/development/playground/playground-postgres/docker-compose.yml
+++ b/development/playground/playground-postgres/docker-compose.yml
@@ -3,15 +3,16 @@ version: "3.9"
 services:
   db:
     container_name: postgres_container
-    image: postgres:14.0
+    image: postgres:16.1
     environment:
       - POSTGRES_DB=playground
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=admin
     ports:
       - "5432:5432"
+    command: postgres -c shared_preload_libraries=pg_stat_statements -c pg_stat_statements.track=all -c max_connections=200
     volumes:
-      - postgres:/data/postgres
+      - postgres:/var/lib/postgresql/data
     restart: unless-stopped
 
   pgadmin:
